Fix player board refreshing causing too much repainting

--- a/src/css/board.css
+++ b/src/css/board.css
@@ -94,19 +94,19 @@
 }
 
 .sunk{
-    position: absolute;
-    object-fit: contain;
+    will-change: opacity;
+    opacity: 0;
 }
 
 .damaged{
-    position: absolute;
-    object-fit: contain;
+    will-change: opacity;
+    opacity: 0;
     filter: invert(60%) sepia(75%) saturate(2859%) hue-rotate(331deg) brightness(99%) contrast(98%);
 }
 
 .missed{
-    position: absolute;
-    object-fit: contain;
+    will-change: opacity;
+    opacity: 0;
     filter: invert(50%) sepia(40%) saturate(4232%) hue-rotate(186deg) brightness(99%) contrast(100%);
 }
 
